# bookreview

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.apache  README.md  Rocket.toml  docker-compose.basic.yml  docker-compose.cache.yml  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.proxy.yml  docker-compose.yml
apache/: httpd.conf
k8s/: bookreview.yaml
load-testing/: README.md  basic-deployment-test.jmx  cache-deployment-test.jmx  collect-metrics.sh  proxy-deployment-test.jmx  run-load-tests.sh  run-redis-load-tests.sh  simple-redis-test.sh  simple-test.sh
load-testing/results/: README.md  load_test_report.md
load-testing/results/basic/: basic_1000users_metrics.txt  basic_100users_metrics.txt  basic_10users_metrics.txt  basic_1users_metrics.txt  basic_5000users_metrics.txt
load-testing/results/basic-proxy/: proxy_1000users_metrics.txt  proxy_100users_metrics.txt  proxy_10users_metrics.txt  proxy_1users_metrics.txt  proxy_5000users_metrics.txt
load-testing/results/cache/: cache_1000users_metrics.txt  cache_100users_metrics.txt  cache_10users_metrics.txt  cache_1users_metrics.txt  cache_5000users_metrics.txt
load-testing/results/production/: production_100users_metrics.txt  (+4 more)
seeder/: main.rs
src/: config.rs  db.rs  main.rs  models.rs  static_files.rs  upload.rs
src/cache/: mod.rs  redis.rs
src/routes/: authors.rs  books.rs  reviews.rs  sales.rs
src/search/: mod.rs  null_engine.rs  opensearch_engine.rs
templates/: _navbar.html.tera  base.html.tera  home.html.tera  upload.html.tera
templates/authors/: _form.html.tera  create.html.tera  edit.html.tera  index.html.tera  read.html.tera
templates/books/: _form.html.tera  create.html.tera  edit.html.tera  index.html.tera  read.html.tera
templates/reviews/: _form.html.tera  create.html.tera  edit.html.tera  index.html.tera  read.html.tera
templates/sales/: _form.html.tera  create.html.tera  edit.html.tera  index.html.tera  read.html.tera
(+3 files in other folders)
