[package]
name = "bookreview"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
mongodb = "3"
rand = "=0.8.5"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
rocket_cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
fake = "4"
opensearch = "2"
async-trait = "0.1"

[[bin]]
name = "seeder"
path = "seeder/main.rs"